hphp/test/zend/good/tests/classes/protected_001b.php.expectf
Call fail()

Fatal error: Call to protected pass::fail() from invalid context in %s/protected_001b.php on line 15
